# Bequnge

./: CMakeLists.txt  Info.plist  bequnge.pro  has_tr1.cpp  mkbundle.sh  mkdmg.make
CMake/: FindOggVorbis.cmake
Particle/: pAPI.h  pDomain.h  pVec.h
ParticleLib/: Actions.cpp  Actions.h  ActionsAPI.cpp  CMakeLists.txt  OtherAPI.cpp  PInternalSourceState.h  PInternalState.cpp  PInternalState.h  Particle.h  ParticleGroup.h
autopackage/: default.apspec
autopackage/skeletons/@trolltech.com/qt4/: skeleton.1
debian/: bequnge.desktop  changelog  cmake_cdbs.mk  control  copyright  files  rules
docs/: CNAME  downloads.html  gettingstarted.html  index.html  screenshots.html  stylesheet.css
examples/: example2d.beq
gle/: ex_alpha.cpp  ex_angle.cpp  ex_cut_round.cpp  ex_raw.cpp  extrude.cpp  gle.pro  rot_prince.cpp  round_cap.cpp  texgen.cpp
libcommongl/: CMakeLists.txt  commonshaders.qrc  commonutils.cpp  commonutils.h  frustum.cpp  frustum.h  makeopengl.py  matrix.cpp  matrix.h  opengl.cpp  opengl.h  postprocessing.cpp  postprocessing.h  shader.cpp  shader.h  smoothvar.cpp  smoothvar.h  texture.cpp  texture.h  vector.cpp  vector.h
libcommongl/shaders/: pp_blend.glsl  pp_bloom.glsl  pp_blurx.glsl  pp_blury.glsl  pp_downsample.glsl  pp_motionblur.glsl
src/: CMakeLists.txt  OGLFT.cpp  OGLFT.h  array.cpp  array.h  codemodification.beq  concurrent.beq  console.cpp  console.h  coord.cpp  coord.h  example3d.beq  example5d.beq  exampleconcurrent.beq  extradimensions.cpp  extradimensions.h  frustum.cpp  frustum.h  fungecommand.cpp  fungecommand.h  fungeconsole.cpp  fungeconsole.h  fungespace.cpp  fungespace.h  glfont.cpp  glfont.h  glview.cpp  glview.h  gstreamer.cpp  gstreamer.h  interpreter.cpp  interpreter.h  magicnumbers.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openal.cpp  openal.h  opengl.cpp  (+21 more)
src/docs/: index.html  keyboardshortcuts.html
src/icons/: Bequnge.icns
src/shaders/: char_frag.glsl  char_vert.glsl  pp_pass0.glsl  pp_pass1.glsl  pp_pass2.glsl  pp_pass3.glsl  pp_vert.glsl
tests/: CMakeLists.txt  testcoord.cpp  testcoord.h  testfungespace.cpp  testfungespace.h  testinterpreter.cpp  testinterpreter.h  testmatrix.cpp  testmatrix.h  teststackstack.cpp  teststackstack.h  testvector.cpp  testvector.h
