# Source files
SET(BEQUNGE-SOURCES
	main.cpp
	mainwindow.cpp
	interpreter.cpp
	fungespace.cpp
	glview.cpp
	OGLFT.cpp
	stringmodewidget.cpp
	fungeconsole.cpp
	fungecommand.cpp
	stackstack.cpp
	coord.cpp
	extradimensions.cpp
	sysinfo.cpp)

# Header files that have Q_OBJECT in
SET(BEQUNGE-MOC-HEADERS
	fungeconsole.h
	fungespace.h
	glview.h
	interpreter.h
	mainwindow.h
	stringmodewidget.h)

# UI files
SET(BEQUNGE-UI
	mainwindow.ui)

# Resource files
SET(BEQUNGE-RESOURCES
	resources.qrc)

# Magic
IF (SOUND_DISABLED)
	ADD_DEFINITIONS(-DSOUND_DISABLED)
ELSE (SOUND_DISABLED)
	SET(BEQUNGE-SOURCES ${BEQUNGE-SOURCES} openal.cpp)
	SET(BEQUNGE-MOC-HEADERS ${BEQUNGE-MOC-HEADERS} openal.h)
ENDIF (SOUND_DISABLED)

SET(CMAKE_CXX_FLAGS ${FREETYPE_CFLAGS})

QT4_WRAP_CPP(BEQUNGE-SOURCES-MOC ${BEQUNGE-MOC-HEADERS})
QT4_WRAP_UI(BEQUNGE-SOURCES-UI ${BEQUNGE-UI})
QT4_ADD_RESOURCES(BEQUNGE-SOURCES-RESOURCE ${BEQUNGE-RESOURCES})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../Particle")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../ParticleLib")
IF (NOT SOUND_DISABLED)
	INCLUDE_DIRECTORIES("${OPENAL_INCLUDE_DIR}")
	INCLUDE_DIRECTORIES("${VORBIS_INCLUDE_DIR}")
ENDIF (NOT SOUND_DISABLED)
INCLUDE_DIRECTORIES("${FREETYPE_INCLUDE_DIR}")
LINK_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}/../ParticleLib")

ADD_EXECUTABLE(bequnge ${BEQUNGE-SOURCES} ${BEQUNGE-SOURCES-MOC} ${BEQUNGE-SOURCES-UI} ${BEQUNGE-SOURCES-RESOURCE})

TARGET_LINK_LIBRARIES(bequnge -lParticle ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTOPENGL_LIBRARY} ${FREETYPE_LIBRARIES} ${OPENAL_LIBRARY} ${OGG_LIBRARY} ${OPENGL_LIBRARY} ${VORBISFILE_LIBRARY})

INSTALL(TARGETS bequnge
	RUNTIME DESTINATION bin)

SET (EXECUTABLE_OUTPUT_PATH ..)
