INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../src")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../libcommongl")

SET(FUNGESPACE-SOURCES
	testfungespace.cpp
	../src/fungespace.cpp
	../src/coord.cpp
)
SET(FUNGESPACE-MOC-HEADERS
	testfungespace.h
	../src/fungespace.h
)
SET (QT_USE_QTTEST 1)
SET (QT_USE_QTOPENGL 0)
INCLUDE(${QT_USE_FILE})

QT4_WRAP_CPP(FUNGESPACE-SOURCES-MOC ${FUNGESPACE-MOC-HEADERS})
ADD_EXECUTABLE(testfungespace ${FUNGESPACE-SOURCES} ${FUNGESPACE-SOURCES-MOC})
TARGET_LINK_LIBRARIES(testfungespace ${QT_LIBRARIES})

SET(COORD-SOURCES
	testcoord.cpp
	../src/coord.cpp
)
SET(COORD-MOC-HEADERS
	testcoord.h
)

QT4_WRAP_CPP(COORD-SOURCES-MOC ${COORD-MOC-HEADERS})
ADD_EXECUTABLE(testcoord ${COORD-SOURCES} ${COORD-SOURCES-MOC})
TARGET_LINK_LIBRARIES(testcoord ${QT_LIBRARIES})


SET(VECTOR-SOURCES
	testvector.cpp
)

SET(VECTOR-MOC-HEADERS
	testvector.h
)

QT4_WRAP_CPP(VECTOR-SOURCES-MOC ${VECTOR-MOC-HEADERS})
ADD_EXECUTABLE(testvector ${VECTOR-SOURCES} ${VECTOR-SOURCES-MOC})
TARGET_LINK_LIBRARIES(testvector ${QT_LIBRARIES})

SET(MATRIX-SOURCES
	testmatrix.cpp
)

SET(MATRIX-MOC-HEADERS
	testmatrix.h
)

QT4_WRAP_CPP(MATRIX-SOURCES-MOC ${MATRIX-MOC-HEADERS})
ADD_EXECUTABLE(testmatrix ${MATRIX-SOURCES} ${MATRIX-SOURCES-MOC})
TARGET_LINK_LIBRARIES(testmatrix ${QT_LIBRARIES})

ADD_CUSTOM_TARGET(test
	./testcoord
	COMMAND ./testfungespace
	COMMAND ./testvector
	COMMAND ./testmatrix
	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/..
	DEPENDS testcoord testfungespace testvector testmatrix)

SET (EXECUTABLE_OUTPUT_PATH ..)
